--- a/index.html
+++ b/index.html
@@ -39,5 +39,5 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="game.js"></script>
 </body>
-<footer>© karthik_192</footer>
+<footer>© Karthik192</footer>
 </html>
